# mongo-mail-web

./: AUTHORS  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py
babel/: babel.bat  mmw.pot
mongo_mail_web/: __init__.py  admin.py  constants.py  countries.py  demo.py  extensions.py  flask_utils.py  form_helpers.py  forms.py  geoip_tools.py  graphite_attime.py  manager.py  metric_utils.py  metrics.py  models.py  settings.py  tasks.py  utils.py  wsgi.py
mongo_mail_web/static/mmw/: login.css
mongo_mail_web/static/mmw/js/dashboard/: counters.js  message-chart.js
mongo_mail_web/templates/mmw/: _login_form.html  base_login.html  login_user.html  unauthorized.html  user_menu.html
mongo_mail_web/templates/mmw/admin/: dashboard-counters.html  dashboard-panels.html  dashboard.html  layout.html  menus.html
mongo_mail_web/templates/mmw/admin/model/: import-domains.html  list.html  show.html
mongo_mail_web/templates/mmw/admin/model/message_store/: list.html  sent-mail.html  show.html
mongo_mail_web/templates/mmw/admin/model/metric/: list.html  show.html
mongo_mail_web/templates/mmw/metrics/: group-by-day.html  multi-top-generic.html  top_country.html  top_generic.html
mongo_mail_web/templates/mmw/mongodb/: debug.html
mongo_mail_web/templates/mmw/security/: change_password.html
mongo_mail_web/translations/fr/LC_MESSAGES/: messages.mo  messages.po
