[metadata]
name = mongo-mail-web
version = 0.1.0
author = Stéphane RAULT
author-email = stephane.rault@radicalspam.org
home-page = https://github.com/srault95/mongo-mail-web
summary = Web UI for Mongo Mail Server
description-file = README.rst
license = BSD
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Framework :: Flask
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: Communications :: Email
    Topic :: Communications :: Email :: Filters
    Natural Language :: English
    Natural Language :: French

[files]
packages =
    mongo_mail_web
data_files =
    mongo_mail_web/templates = templates/*
    mongo_mail_web/static = static/*
    mongo_mail_web/translations = translations/*

[global]
setup-hooks =
    pbr.hooks.setup_hook
    
[entry_points]
console_scripts =
    mongo-mail-web = mongo_mail_web.manager:main
    
[pbr]
warnerrors = False
    
[nosetests]
verbosity = 1
detailed-errors = 1
#with-coverage = 1
#cover-erase = 1
#cover-html = 1
#cover-html-dir = ../htmlcov
#cover-package = mongoengine
#where = mongo_mail_server
